--- a/client/package.json
+++ b/client/package.json
@@ -13,11 +13,14 @@
   "dependencies": {
     "axios": "^1.4.0",
     "bootstrap": "^5.3.3",
+    "cross-spawn": "^7.0.6",
+    "glob": "^11.1.0",
     "next": "^16.0.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-stripe-checkout": "^2.6.3"
+    "react-stripe-checkout": "^2.6.3",
+    "tar": "^7.5.7"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.9.1",
@@ -25,6 +28,4 @@
     "babel-jest": "^30.2.0",
     "jest": "^30.2.0"
   }
-
 }
-
